--- a/clase/29/front-end/index.html
+++ b/clase/29/front-end/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
     <title>Proyecto</title>
 </head>
+
 <body>
-    <h1>Hola mundo</h1>
+    <h1>Ordenes</h1>
+    <hr>
+    <div id="show-products"></div>
     <script src="./index.js"></script>
 </body>
+
 </html>
